--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,6 @@
 DB_USER=postgres
-DB_PASSWORD=12345
+DB_PASSWORD=orius12345
 DB_HOST=localhost
-EMAIL = m@hotmail.com
-PASSWORD = 1234567
-PHONE = 111111111
+EMAIL=m@hotmail.com
+PASSWORD=1234567
+PHONE=111111111
