--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.10.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -22,6 +23,7 @@
     "redux-thunk": "^2.4.1",
     "sweetalert": "^2.1.2",
     "typescript": "^4.7.4",
+    "vimeo": "^2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
